--- a/app/src/main/res/layout/activity_advice.xml
+++ b/app/src/main/res/layout/activity_advice.xml
@@ -24,59 +24,59 @@
         android:layout_marginTop="100dp"
         android:layout_marginHorizontal="30dp"
         />
+
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/option_1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/rounded_corner"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/question"
-        android:layout_marginVertical="30dp"
         android:layout_marginHorizontal="30dp"
-        android:text="Do áp lực thời gian"
-        android:textColor="@color/white"
-        />
+        android:layout_marginVertical="30dp"
+        android:background="@drawable/glass"
+        android:text="căng thẳng do áp lực thời gian"
+        android:textColor="@color/black"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/question" />
+
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/option_2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/rounded_corner"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/option_1"
-        android:layout_marginVertical="30dp"
         android:layout_marginHorizontal="30dp"
-        android:text="Cảm giác thiếu chắc chắn"
-        android:textColor="@color/white"
-        />
+        android:layout_marginVertical="30dp"
+        android:background="@drawable/glass"
+        android:text="căng thẳng do cảm giác thiếu chắc chắn"
+        android:textColor="@color/black"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/option_1" />
+
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/option_3"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/rounded_corner"
-
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/option_2"
-        android:layout_marginVertical="30dp"
         android:layout_marginHorizontal="30dp"
-        android:text="do sự kiện bất ngờ"
-        android:textColor="@color/white"
-        />
+
+        android:layout_marginVertical="30dp"
+        android:background="@drawable/glass"
+        android:text="căng thẳng do sự kiện bất ngờ"
+        android:textColor="@color/black"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/option_2" />
+
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/option_4"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/rounded_corner"
-
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/option_3"
-        android:layout_marginVertical="30dp"
         android:layout_marginHorizontal="30dp"
-        android:text="thẳng liên quan đến con người"
-        android:textColor="@color/white"
-        />
+
+        android:layout_marginVertical="30dp"
+        android:background="@drawable/glass"
+        android:text="căng thẳng liên quan đến con người"
+        android:textColor="@color/black"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/option_3" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
