--- a/app/src/main/res/layout/activity_advice_option.xml
+++ b/app/src/main/res/layout/activity_advice_option.xml
@@ -55,5 +55,15 @@
         android:layout_marginHorizontal="20dp"
         />
 
+    <Button
+        android:id="@+id/button"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:layout_marginTop="32dp"
+        android:text="@string/next_quest"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/choice" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
