--- a/app/src/main/res/layout/activity_advice_result.xml
+++ b/app/src/main/res/layout/activity_advice_result.xml
@@ -2,68 +2,78 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/advice_card"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".AdviceResultActivity"
-    android:id="@+id/advice_card"
     android:background="@drawable/image_1"
     android:clickable="true"
     android:focusable="true"
-    android:focusableInTouchMode="true">
+    android:focusableInTouchMode="true"
+    tools:context=".AdviceResultActivity">
+
     <TextView
         android:id="@+id/cangThang"
+        style="@style/AppTheme.TextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/stressType"
-        style="@style/AppTheme.TextView"
-        android:textAlignment="center"
         android:layout_marginTop="240dp"
         android:layout_marginBottom="0dp"
-        android:textSize="36sp"
         android:paddingHorizontal="23dp"
         android:text="@string/stress_name"
-        />
+        android:textAlignment="center"
+        android:textSize="36sp"
+        app:layout_constraintBottom_toTopOf="@id/stressType"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/stressType"
+        style="@style/AppTheme.TextViewBold"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="0dp"
-        app:layout_constraintTop_toBottomOf="@id/cangThang"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/guideline"
-        app:layout_constraintEnd_toEndOf="parent"
-        style="@style/AppTheme.TextViewBold"
-        android:text="@string/stress_time"
-        android:textAlignment="center"
         android:layout_marginBottom="40dp"
         android:paddingHorizontal="20dp"
-        android:textSize="36sp"/>
+        android:text="@string/stress_time"
+        android:textAlignment="center"
+        android:textSize="36sp"
+        app:layout_constraintBottom_toTopOf="@id/guideline"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/cangThang" />
 
 
     <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/guideline"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.5"/>
+        app:layout_constraintGuide_percent="0.5" />
 
     <TextView
         android:id="@+id/description_stress"
+        style="@style/AppTheme.TextViewBold"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/guideline"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        style="@style/AppTheme.TextViewBold"
-        android:textColor="@color/white"
-        android:text="@string/des_stress_time"
-        android:paddingHorizontal="40dp"
-        android:textSize="24sp"
         android:layout_marginTop="40dp"
-        />
+        android:paddingHorizontal="40dp"
+        android:text="@string/des_stress_time"
+        android:textColor="@color/white"
+        android:textSize="24sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/guideline" />
+
+    <TextView
+        android:id="@+id/textView9"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="34dp"
+        android:fontFamily="@font/oswald_bold"
+        android:text="@string/instruction_after_advice"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
