--- a/app/src/main/res/layout/activity_instruction.xml
+++ b/app/src/main/res/layout/activity_instruction.xml
@@ -15,17 +15,23 @@
 
     <TextView
         android:id="@+id/instructionText"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="@string/instruction"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="24dp"
+        android:lineSpacingExtra="8sp"
         android:scaleType="fitCenter"
+        android:text="@string/instruction"
+        android:textAlignment="center"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@id/guideline"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/guideline"
-        android:layout_marginBottom="24dp"
-        android:textStyle="bold"
-        android:textAlignment="center"
-        android:textSize="18sp"/>
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/okButton"
