--- a/app/src/main/res/layout/activity_title.xml
+++ b/app/src/main/res/layout/activity_title.xml
@@ -9,61 +9,90 @@
     android:orientation="vertical"
     tools:context=".Title">
 
-    <RelativeLayout
-        android:layout_marginHorizontal="30dp"
-        android:layout_marginVertical="30dp"
-        android:layout_centerInParent="true"
-        android:background="@drawable/main_header_selector"
-        android:backgroundTint="#80FFFFFF"
-        android:layout_gravity="center_horizontal"
-        android:layout_height="match_parent"
-        android:layout_width="match_parent">
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-        <ImageView
-            android:id="@+id/icon"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/ic_clipboard"
-            android:layout_marginTop="70dp"
-            android:scaleType="centerInside"
-            android:scaleX=".5"
-            android:scaleY=".5"
-            android:adjustViewBounds = "true"
-            android:layout_alignParentTop="true"
-            android:contentDescription="Stress"
+        <RelativeLayout
+            android:id="@+id/relativeLayout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginHorizontal="30dp"
+            android:layout_marginVertical="30dp"
+            android:background="@drawable/main_header_selector"
+            android:backgroundTint="#80FFFFFF"
+            tools:layout_editor_absoluteX="29dp"
+            tools:layout_editor_absoluteY="30dp">
 
-            />
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
 
-        <TextView
-            android:id="@+id/title"
-            android:layout_below="@id/icon"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/title"
-            android:textAlignment="center"
-            android:fontFamily="@font/oswald_bold"
-            android:textSize="36sp"
-            android:textColor="@color/purple_main"
-            android:layout_centerHorizontal="true"/>
+                <ImageView
+                    android:id="@+id/icon"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:adjustViewBounds="true"
+                    android:contentDescription="Stress"
+                    android:scaleType="centerInside"
+                    android:scaleX=".5"
+                    android:scaleY=".5"
+                    android:src="@drawable/ic_clipboard"
 
-        <androidx.appcompat.widget.AppCompatButton
-            android:theme="@style/AppTheme.Button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@drawable/rounded_corner"
-            android:drawableTint="@color/purple_200"
-            android:layout_below="@+id/title"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="36dp"
-            android:text="@string/get_started"
-            android:textSize="24sp"
-            android:paddingHorizontal="36dp"
-            android:textAllCaps="false"
-            android:fontFamily="@font/pacifico_regular"
-            android:id="@+id/getStarted"
-            />
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
 
-    </RelativeLayout>
+                <Button
+                    android:id="@+id/button7"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="16dp"
+                    android:backgroundTint="@color/purple_200"
+                    android:fontFamily="@font/pacifico_regular"
+                    android:text="@string/usage_instruction"
+                    android:textAllCaps="false"
+                    android:textSize="24sp"
+                    app:iconTint="@color/purple_200"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/getStarted" />
+
+                <TextView
+                    android:id="@+id/title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="16dp"
+                    android:fontFamily="@font/oswald_bold"
+                    android:text="@string/title"
+                    android:textAlignment="center"
+                    android:textColor="@color/purple_main"
+                    android:textSize="30sp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/icon" />
+
+                <androidx.appcompat.widget.AppCompatButton
+                    android:id="@+id/getStarted"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="16dp"
+                    android:background="@drawable/rounded_corner"
+                    android:drawableTint="@color/purple_200"
+                    android:fontFamily="@font/pacifico_regular"
+                    android:paddingHorizontal="36dp"
+                    android:text="@string/get_started"
+                    android:textAllCaps="false"
+                    android:textSize="24sp"
+                    android:theme="@style/AppTheme.Button"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/title" />
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+        </RelativeLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 
 </RelativeLayout>
