--- a/app/src/main/res/layout-notlong/activity_usage_instruction.xml
+++ b/app/src/main/res/layout-notlong/activity_usage_instruction.xml
@@ -55,6 +55,7 @@
                     android:layout_marginTop="20dp"
                     android:fontFamily="@font/oswald_bold"
                     android:text="@string/usage_instruction2_1"
+                    android:textAlignment="viewStart"
                     android:textSize="30sp" />
 
                 <TextView
@@ -83,6 +84,7 @@
                     android:layout_marginTop="20dp"
                     android:fontFamily="@font/oswald_bold"
                     android:text="@string/UserCode_title"
+                    android:textAlignment="viewStart"
                     android:textSize="30sp" />
 
                 <EditText
