--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -92,57 +92,101 @@
                     android:text="@string/everyday_title"
                     android:textColor="@color/purple_main"
                     android:textSize="28sp" />
-
             </LinearLayout>
         </androidx.cardview.widget.CardView>
 
     </LinearLayout>
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/historyButton"
-        android:layout_width="match_parent"
-        android:layout_height="225dp"
-        android:layout_marginHorizontal="40dp"
-        android:layout_marginBottom="50dp"
-        app:cardBackgroundColor="@android:color/transparent"
-        app:cardElevation="0dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent">
+    <LinearLayout
+        android:id="@+id/bottom_half"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="0dp"
+        android:gravity="bottom|center|center_horizontal"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent">
+        <androidx.cardview.widget.CardView
+            android:id="@+id/historyButton"
+            android:layout_width="wrap_content"
+            android:layout_height="225dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginBottom="50dp"
+            app:cardBackgroundColor="@android:color/transparent"
+            app:cardElevation="0dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="@id/stepButton">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@drawable/main_header_selector"
-            android:backgroundTint="@color/glass_white"
-            android:gravity="center"
-            android:orientation="vertical"
-            android:paddingVertical="40dp">
+            <LinearLayout
+                android:layout_width="160dp"
+                android:layout_height="match_parent"
+                android:background="@drawable/main_header_selector"
+                android:backgroundTint="@color/glass_white"
+                android:gravity="center"
+                android:orientation="vertical"
+                android:paddingVertical="40dp">
 
-            <ImageView
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:adjustViewBounds="true"
-                android:contentDescription="historyicon"
-                android:scaleType="fitCenter"
-                android:src="@drawable/ic_medical_folder"
-                app:tint="@color/purple_main" />
+                <ImageView
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
+                    android:adjustViewBounds="true"
+                    android:contentDescription="historyicon"
+                    android:scaleType="fitCenter"
+                    android:src="@drawable/ic_medical_folder"
+                    app:tint="@color/purple_main" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/oswald_bold"
-                android:text="@string/button_History"
-                android:textColor="@color/purple_main"
-                android:textSize="28sp" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/oswald_bold"
+                    android:text="@string/button_History"
+                    android:textColor="@color/purple_main"
+                    android:textSize="28sp" />
 
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
+            </LinearLayout>
+        </androidx.cardview.widget.CardView>
+        <androidx.cardview.widget.CardView
+            android:id="@+id/stepButton"
+            android:layout_width="wrap_content"
+            android:layout_height="225dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginBottom="50dp"
+            app:cardBackgroundColor="@android:color/transparent"
+            app:cardElevation="0dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="@id/historyButton"
+            app:layout_constraintRight_toRightOf="parent">
 
-            </androidx.constraintlayout.widget.ConstraintLayout>
-        </LinearLayout>
-    </androidx.cardview.widget.CardView>
+            <LinearLayout
+                android:layout_width="160dp"
+                android:layout_height="match_parent"
+                android:background="@drawable/main_header_selector"
+                android:backgroundTint="@color/glass_white"
+                android:gravity="center"
+                android:orientation="vertical"
+                android:paddingVertical="40dp">
+
+                <ImageView
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
+                    android:adjustViewBounds="true"
+                    android:contentDescription="historyicon"
+                    android:scaleType="fitCenter"
+                    android:src="@drawable/ic_shoes"
+                    app:tint="@color/purple_main" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/oswald_bold"
+                    android:text="@string/button_Step"
+                    android:textColor="@color/purple_main"
+                    android:textSize="28sp" />
+
+            </LinearLayout>
+        </androidx.cardview.widget.CardView>
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="0dp"
@@ -151,7 +195,7 @@
         android:layout_marginEnd="32dp"
         android:gravity="center_horizontal"
         android:orientation="vertical"
-        app:layout_constraintBottom_toTopOf="@+id/historyButton"
+        app:layout_constraintBottom_toTopOf="@+id/bottom_half"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout2">
