--- a/app/src/main/res/layout/fragment_camera.xml
+++ b/app/src/main/res/layout/fragment_camera.xml
@@ -7,7 +7,7 @@
     tools:context=".CameraFragment"
     android:background="@drawable/image_1">
 
-    <galaxy.app.stressdetector.AutoFitTextureView
+    <galaxy.app.destressify.AutoFitTextureView
         android:id="@+id/texture"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
