--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources >
     <!-- Base application theme. -->
-    <style name="Theme.StressDetector" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+    <style name="Theme.Destressfiy" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/purple_main</item>
         <item name="colorPrimaryVariant">@color/purple_500</item>
